testsuite/tests/rename/should_compile/T15214.hs
{-# LANGUAGE TypeOperators #-}
module T15214 where

type (~) = Either
